@@ -57,3 +57,12 @@ body {
 .footer a:hover{
   color:rgb(10, 195, 127)
 }
+
+.userInfo{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.userInfo_col {
+  grid-row: 1;
+}
