@@ -4,6 +4,7 @@ import Moment from "moment";
 import axios from "axios";
 import Nav from '../components/Nav';
 import Footer from '../components/Footer';
+import Filelist from "../components/Filelist";
 function Session() {
 const location = useLocation();
 const session_id = location.state.session_id;
@@ -22,32 +23,34 @@ return <div className="pageLayout">
 <Nav/>
 <div className="content">  
 <table className="sessionDataTable">
-          <tbody>
-            <tr>
-            <td>Subsession Title</td>
-            <td>Presenter</td>
-            <td>Start Time</td>
-            <td>End Time</td>
-            <td>Moderator</td>
-            </tr>
-            {subsessions.map((subsession, key) => (
-              <tr key={subsession.subsession_id}>
-                <td>{subsession.subsession_title}</td>
-                <td>
-                  <Link to="/ViewUser" state={{ user_id: subsession._user_id }}>
-                    {subsession.presenter}
-                  </Link>
-                </td>
-                <td>{Moment(subsession.startTime).format("MM/DD/YY h:mmA")}</td>
-                <td>{Moment(subsession.endTime).format("MM/DD/YY h:mmA")}</td>
-                <td>{subsession.modName}</td>
-              </tr>
-            ))}
-          </tbody>
-        </table>
+  <tbody>
+    <tr>
+      <td>Subsession Title</td>
+      <td>Presenter</td>
+      <td>Start Time</td>
+      <td>End Time</td>
+      <td>Moderator</td>
+    </tr>
+    {subsessions.map((subsession, key) => (
+    <tr key={subsession.subsession_id}>
+      <td>
+        {subsession.subsession_title} 
+        <br/> <Filelist state={{ id: subsession.subsession_id }} />
+      </td>
+      <td>
+        <Link to="/ViewUser" state={{ user_id: subsession._user_id }}>
+          {subsession.presenter}
+        </Link>        
+      </td>
+      <td>{Moment(subsession.startTime).format("MM/DD/YY h:mmA")}</td>
+      <td>{Moment(subsession.endTime).format("MM/DD/YY h:mmA")}</td>
+      <td>{subsession.modName}</td>
+    </tr>
+    ))}
+  </tbody>
+</table>
 </div>
 <Footer/>  
 </div>;
 }
-
 export default Session
