@@ -1,7 +1,6 @@
 import React from 'react'
 import Nav from "../components/Nav";
 import Footer from "../components/Footer";
-import PageWIP from '../components/PageWIP';
 import SessionList from '../components/SessionList';
 function Sessions() {
   return <div className="pageLayout">
